Table User {
  id Int [pk, increment]
  username String [not null, unique]
  password_hash String [not null]
  email String [not null]
}

Table AccessToken {
  id Int [pk, increment]
  user_id Int [not null, ref: > User.id]
  token String [not null]
  created_at DateTime [not null]
}

Table RefreshToken {
  id Int [pk, increment]
  user_id Int [not null, ref: > User.id]
  token String [not null]
  created_at DateTime [not null]
}

Table ChatSession {
  id Int [pk, increment]
  user_id Int [not null, ref: > User.id]
  created_at DateTime [not null]
  updated_at DateTime [not null]
}

Table ChatHistory {
  id Int [pk, increment]
  session_id Int [not null, ref: > ChatSession.id]
  prompt String [not null]
  response String [not null]
  created_at DateTime [not null]
}

Table UsedToken {
  id Int [pk, increment]
  user_id Int [not null, ref: > User.id]
  token String [not null]
  created_at DateTime [not null]
}
